--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-schema/stored_programs/*.sql linguist-language=SQLPL
+schema/stored_programs/* linguist-language=SQLPL
 schema/routines.sql linguist-language=SQLPL
 
