Correct language hints

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,3 @@
 *.sql linguist-language=SQL
-schema/stored_programs/* linguist-language=SQLPL
-schema/routines.sql linguist-language=SQLPL
-
+schema/stored_programs/* linguist-language=SQL/PSM
+schema/routines.sql linguist-language=SQL/PSM
