--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
           MYSQL_USER: test
           MYSQL_PASSWORD: test
           MYSQL_DATABASE: ispyb_build
-          MYSQL_ROOT_PASSWORD: password
+          MYSQL_ROOT_PASSWORD: rootpassword
         ports:
           - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
@@ -21,5 +21,4 @@ jobs:
       - name: Build database
         run: |
           cp .my.example.cnf .my.cnf
-          sed -i '/^password/d' .my.cnf
           bash build.sh
