--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,8 +28,9 @@ jobs:
 
       - name: Regenerate sql files
         run: |
-          bash bin/backup.sh schemas/ispyb/
-          rm .my.cnf
+          cd bin
+          bash backup.sh ../schemas/ispyb/
+          rm ../.my.cnf
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
