--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,11 +23,14 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build database
         run: |
+          sudo apt-get update
+          sudo apt-get install mariadb-server
           cp .my.example.cnf .my.cnf
           bash build.sh
 
       - name: Regenerate sql files
         run: |
+          mysqldump --version
           cd bin
           bash backup.sh ../schemas/ispyb/
           rm ../.my.cnf
