try new mariadb

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build database
         run: |
+          sudo apt-get install curl software-properties-common dirmngr ca-certificates apt-transport-https -y
+          curl -LsS https://downloads.mariadb.com/MariaDB/mariadb_repo_setup | sudo bash -s -- --mariadb-server-version=10.8
           sudo apt-get update
           sudo apt-get install mariadb-server
           cp .my.example.cnf .my.cnf
