--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,7 @@ jobs:
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
+        if: github.ref == 'refs/heads/master'
         with:
             token: ${{ secrets.GITHUB_TOKEN }}
             commit-message: Update database sql files
