--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,8 @@ jobs:
           rm ../.my.cnf
 
       - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v3
+        uses: peter-evans/create-pull-request@v4
+        if: github.ref == 'refs/heads/master'
         with:
             token: ${{ secrets.GITHUB_TOKEN }}
             commit-message: Update database sql files
@@ -49,4 +50,3 @@ jobs:
               Before merging this pull request you may want to:
               * [ ] Update `HISTORY.md` to reflect the changes in this pull request
             branch: update-schema-sql
-            branch-suffix: short-commit-hash
